# flake8-sqlalchemy

./: .editorconfig  .pre-commit-config.yaml  LICENSE.md  README.md  pyproject.toml
.github/: dependabot.yml
.github/workflows/: lower-bounds.yml  main.yml  release.yml  zizmor.yml
flake8_sqlalchemy/: plugin.py
flake8_sqlalchemy/checkers/: __init__.py  _base.py  column_comment.py  import_alias.py  relationship_backref_checker.py
src/flake8_sqlalchemy/: issue.py
tests/: conftest.py  test_basic.py
tests/checkers/: test_base.py  test_column_comment.py  test_import_alias.py  test_relationship_backref_checker.py
