[project]
name = "flake8-sqlalchemy"
version = "0.2.0"
description = "A flake8 plugin to detect issues with SQLAlchemy code"
authors = [
    { name = "Mike Fiedler", email = "miketheman@gmail.com" }
]
license = "MIT"
readme = "README.md"
keywords = ["flake8", "lint", "sqlalchemy"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Framework :: Flake8",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Software Development :: Quality Assurance",
    "Topic :: Software Development :: Testing",
    "Topic :: Utilities",
    "Typing :: Typed",
]
requires-python = ">=3.9"
dependencies = [
    "flake8 >=6, <8",
    "sqlalchemy",
]

[dependency-groups]
dev = [
  "astpretty >=3.0.0",
  "mypy >=1.2.0",
  "pytest >=7.3, <9.0",
  "pytest-cov >=4, <6",
  "sqlalchemy >=2.0",
]

[project.entry-points."flake8.extension"]
SQA = "flake8_sqlalchemy:Plugin"

[project.urls]
Repository = "https://github.com/miketheman/flake8-sqlalchemy"

[tool.coverage.run]
branch = true
source = ["flake8_sqlalchemy"]

[tool.isort]
profile = "black"

[tool.pytest.ini_options]
addopts = "--cov=flake8_sqlalchemy --cov-report=term-missing"

[tool.mypy]
show_error_codes = true
strict = true
warn_unused_configs = true
warn_unused_ignores = true
warn_unreachable = true

[tool.vulture]
paths = ["flake8_sqlalchemy"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
